--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Css for javascript developer</title>
-</head>
-<body>
+  </head>
+  <body>
     <!----------- 1 ------------->
     <!-- <h1 class="title">
         Try changing me!
@@ -31,7 +31,7 @@
     <button>!</button> -->
 
     <!-------------- 5 -------------->
-    <h1>Pizza Toppings</h1>
+    <!-- <h1>Pizza Toppings</h1>
     <br>
     <label>
         <input type="checkbox">
@@ -46,17 +46,143 @@
     <label>
         <input type="checkbox">
         Carrots
-    </label>
-    
+    </label> -->
 
     <!-------------- 6 -------------->
+    <!-- <label>
+      Postal Code:
+      <input type="text" placeholder="AIA IAI" />
+    </label> -->
 
     <!-------------- 7 -------------->
+    <!-- <p>This paragraph has little arrow</p> -->
 
     <!-------------- 8 -------------->
+    <!-- <p>This paragraph has a decorative circle.</p> -->
 
     <!-------------- 9 -------------->
+    <!-- <nav>
+        <a href="">Home</a>
+        -
+        <a href="">Shop</a>
+    </nav>
+    <p>Hello world! you might be interested reading <a href="">an article</a></p> -->
 
     <!-------------- 10 -------------->
-</body>
+    <!-- <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Shop</a></li>
+        </ul>
+    </nav> -->
+
+    <!-------------- 11 -------------->
+    <!-- <ul class="main-list">
+        <li>Salt</li>
+        <li>Papper</li>
+        <li>Fruits & veg
+            <ul>
+                <li>Apple</li>
+                <li>Banana</li>
+                <li>Carrots</li>
+            </ul>
+        </li>
+    </ul> -->
+
+    <!-------------- 12 -------------->
+    <!-- <ul class="main-list">
+        <li>Salt</li>
+        <li>Papper</li>
+        <li>Fruits & veg
+            <ul>
+                <li>Apple</li>
+                <li>Banana</li>
+                <li>Carrots</li>
+            </ul>
+        </li>
+    </ul> -->
+
+    <!-------------- 13 -------------->
+    <!-- <article class="recipe">
+        <h2>Chicken Vindaloo</h2>
+        <p>
+            "Vindaloo" is a popular Indian <a href="">curry dish</a> that calls for meat to be marinated in a highly flavoured spicy mixture with vinegar,then quickly cooked up when you're ready to eat.
+        </p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam, facere?Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, modi?
+        </p>
+    </article>
+    <aside>
+        <p>Quick warning: <strong>this recipe is <em>spicy</em></strong>.<a href="">click here</a>for an Lorem ipsum dolor sit amet.</p>
+    </aside> -->
+
+    <!---------------- part-02 ------------>
+    <!-------------- 14 -------------->
+    <!-- <div class="box"></div> -->
+
+    <!-------------- 15 -------------->
+    <!-- <div class="first box">1</div>
+    <div class="second box">2</div>
+    <div class="third box">3</div>
+    <div class="fourth box">4</div> -->
+
+    <!-------------- 16 -------------->
+    <!-- <p>
+        This is a paragraph with a <em>Highlighted section</em>
+    </p> -->
+
+    <!-------------- 17 -------------->
+    <!-- <p>This paragraph has a relative amount of bottom padding.</p> -->
+
+    <!-------------- 18 -------------->
+
+    <!-- <p>
+        <span style="font-size:1em">
+            This
+        </span>
+        <span style="font-size:0.8em">
+            sentence
+        </span>
+        <span style="font-size:0.6em">
+            gets
+        </span>
+        <span style="font-size:0.4em">
+            quieter
+        </span>
+        <span style="font-size:1em">
+            and
+        </span>
+        <span style="font-size:0.2em">
+            quieter.
+        </span>
+    </p> -->
+    <!-------------- 19 -------------->
+    <!-- <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+    <h2>Lorem ipsum dolor sit.</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic mollitia tempore sed itaque esse aperiam eveniet aut architecto quia dolores!</p> -->
+
+    <!-------------- 20 -------------->
+    <!-- <div class="box">
+        <div class="child"></div>
+    </div> -->
+
+    <!-------------- 21 -------------->
+
+    <!-------------- 22 -------------->
+
+    <!-------------- 23 -------------->
+
+    <!-------------- 24 -------------->
+
+    <!-------------- 25 -------------->
+
+    <!-------------- 26 -------------->
+
+    <!-------------- 27 -------------->
+
+    <!-------------- 28 -------------->
+
+    <!-------------- 29 -------------->
+
+    <!-------------- 30 -------------->
+  </body>
 </html>
