--- a/index.html
+++ b/index.html
@@ -166,14 +166,24 @@
     </div> -->
 
     <!-------------- 21 -------------->
+    <!-- <p>This paragraph contains <a href="a">a hyperlink</a>!</p>
+    <p style="color: red;">This is a red paragraph with <a href="a">Another link</a>.</p> -->
 
     <!-------------- 22 -------------->
+    <!-- <p class="introduction" id="jwc">Hello world</p> -->
 
     <!-------------- 23 -------------->
+    <!-- <section>
+        <p>Helloe World</p>
+    </section> -->
 
     <!-------------- 24 -------------->
+    <!-- <section>
+        <div class="box"></div>
+    </section> -->
 
     <!-------------- 25 -------------->
+    <div class="box"></div>
 
     <!-------------- 26 -------------->
 
