--- a/index.html
+++ b/index.html
@@ -183,16 +183,28 @@
     </section> -->
 
     <!-------------- 25 -------------->
-    <div class="box"></div>
+    <!-- <div class="box"></div> -->
 
     <!-------------- 26 -------------->
+    <!-- <div class="box"></div> -->
 
     <!-------------- 27 -------------->
+    <div class="outline-offset"></div>
 
     <!-------------- 28 -------------->
 
     <!-------------- 29 -------------->
 
     <!-------------- 30 -------------->
+
+    <!-------------- 31 -------------->
+
+    <!-------------- 32 -------------->
+
+    <!-------------- 33 -------------->
+
+    <!-------------- 34 -------------->
+
+    <!-------------- 35 -------------->
   </body>
 </html>
