create images folder and edit index.html, styles.css files

--- a/index.html
+++ b/index.html
@@ -189,11 +189,35 @@
     <!-- <div class="box"></div> -->
 
     <!-------------- 27 -------------->
-    <div class="outline-offset"></div>
+    <!-- <div class="outline-offset"></div> -->
 
     <!-------------- 28 -------------->
 
+    <!-- <div class="box">
+        <h1 class="header">This is a header.</h1>
+        <p class="paragraph">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequat.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque,
+          laborum soluta. Perferendis aperiam quod placeat earum ipsam fugit
+          enim sequi!
+        </p>
+      </div> -->
+
     <!-------------- 29 -------------->
+
+    <div class="card">
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequat.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, laborum
+        soluta. Perferendis aperiam quod placeat earum ipsam fugit enim sequi!
+      </p>
+      <img src="./images/cute-seal.jpg" alt="a cute seal" />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita
+        veritatis, debitis reprehenderit numquam voluptate ex provident quam
+        animi ea suscipit.
+      </p>
+    </div>
 
     <!-------------- 30 -------------->
 
